--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -725,7 +725,7 @@
     --neon-color-loading-3: rgba(82, 82, 82, 0.5);
 
     /* scrollbars */
-    --neon-color-scrollbar: rgba(255, 255, 255, 0.05);
+    --neon-color-scrollbar: rgba(255, 255, 255, 0.125);
 
     /* overlays */
     --neon-background-color-overlay: rgba(var(--neon-rgb-neutral-d5), 0.75);
